[package]
name = "tyto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "color"] }
colored = "2"
pest = "2.8.6"
pest_derive = "2.8.6"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1"
